--- a/client/src/components/pages/Splash.css
+++ b/client/src/components/pages/Splash.css
@@ -7,3 +7,9 @@ body {
     justify-content: center;
     margin-top: 350px;
 }
+
+.button {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+}
