--- a/client/src/components/pages/Cards.css
+++ b/client/src/components/pages/Cards.css
@@ -1,16 +1,7 @@
-.cards {
-    display: flex;
-    justify-content: space-around;
-    margin: 50px;
-}
+
 
 .container {
-    min-width: auto;
-    display: flex;
-	flex-wrap: wrap;
-	align-items: center;
-    justify-content: center;
-    object-fit: cover;
-	height: 100%;
-	width: 100%
+    /* margin-top: 10px; */
+	max-height: 450px;
+	max-width: 250px;
 }
