--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,1 +1,9 @@
 /* TODO Add site wide styles */
+.card-container {
+    margin-top: 5vh;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 100%;
+}
