--- a/client/src/scss/comment.module.scss
+++ b/client/src/scss/comment.module.scss
@@ -1,5 +1,6 @@
 .container {
     display: flex;
+    justify-content: space-between;
     padding-left: 1vw;
     margin: 10px;
     background-color: white;
@@ -7,3 +8,10 @@
     border: 1px solid grey;
     width: 30vw;
 }
+
+.myButton {
+    border: none;
+    background-color: white;
+    border-radius: 25%;
+}
+
