--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,22 @@
 /* TODO Add site wide styles */
 .card-container {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 80vh;
+}
+
+.inside-container {
     margin-top: 5vh;
     display: flex;
-    flex-direction: row;
+    justify-content: center;
+    align-content: space-between;
     flex-wrap: wrap;
-    width: 100%;
-    height: 100%;
+    width: 60%;
+}
+
+.image-card {
+    width: 220px !important; /* width of container */
+    height: 200px !important; /* height of container */
+    object-fit: cover !important;
 }
