--- a/client/src/scss/photo.module.scss
+++ b/client/src/scss/photo.module.scss
@@ -36,6 +36,9 @@ textarea {
 }
 
 .middleContainer {
+    display: flex;
+    font-size: 20px;
+    justify-content: center;
     border-bottom: 1px solid grey;
     margin-left: 20vw;
     margin-right: 20vw;
