--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,10 +7,10 @@
 }
 
 .inside-container {
-    margin-top: 5vh;
+    /* margin-top: 5vh; */
     display: flex;
     justify-content: space-between;
-    align-content: space-between;
+    align-items: space-between;
     flex-wrap: wrap;
     width: 80%;
 }
