--- a/client/src/scss/imageCard.module.scss
+++ b/client/src/scss/imageCard.module.scss
@@ -1,3 +1,43 @@
 .container {
-    width: 360px;
+    margin-top: 3vh;
+    background-color: white;
+    width: 365px;
+    height: 420px;
+    border-radius: 1%;
+}
+
+.headerContainer {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin-left: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.textHeader {
+    color: black;
+    text-decoration: none;
+}
+
+.textHeader:hover {
+    color: black;
+}
+
+.textHeader:link {
+    text-decoration: none;
+  }
+
+.featuredText {
+    color: grey;
+    font-size: 10px;
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    margin-left: 10px;
+    margin-top: 8px;
+    width: 100%;
 }
