--- a/client/src/scss/photo.module.scss
+++ b/client/src/scss/photo.module.scss
@@ -38,11 +38,13 @@ textarea {
 .middleContainer {
     display: flex;
     font-size: 20px;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     border-bottom: 1px solid grey;
     margin-left: 20vw;
     margin-right: 20vw;
     margin-bottom: 3vh;
+    height: 6vh;
 }
 
 form {
