--- a/client/src/scss/photo.module.scss
+++ b/client/src/scss/photo.module.scss
@@ -26,9 +26,11 @@ textarea {
 	padding:7px 24px;
     text-decoration:none;
     border-radius: 5px;
+    border: none;
 }
 .myButton:hover {
-	background-color:transparent;
+    background-color:transparent;
+    border: none;
 }
 .myButton:active {
 	position:relative;
