--- a/client/src/scss/footer.module.scss
+++ b/client/src/scss/footer.module.scss
@@ -3,10 +3,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100px;
+    height: 110px;
     width: 100%;
     border: 1px solid black;
-    margin-top: 2vh;
+    // margin-top: 2vh;
 }
 
 .logos {
