--- a/client/src/scss/splash.module.scss
+++ b/client/src/scss/splash.module.scss
@@ -3,14 +3,17 @@ body {
 }
 
 .homeContainer{
-    // background-image: url(https://images.unsplash.com/photo-1607170040603-66bd4c448205?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2550&q=80);
-    // height: 100vh;
+    background-image: url(https://images.unsplash.com/photo-1607026567935-9688a07f7821?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2916&q=80);
+    height: 80vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .start {
     display: flex;
     justify-content: center;
-    margin-top: 350px;
+    // margin-top: 350px;
 }
 
 .button {
