--- a/client/src/scss/comment.module.scss
+++ b/client/src/scss/comment.module.scss
@@ -3,15 +3,18 @@
     justify-content: space-between;
     padding-left: 1vw;
     margin: 10px;
-    background-color: white;
+    // background-color: white;
     border-radius: 10px;
-    border: 1px solid grey;
+    // border: 1px solid grey;
     width: 30vw;
 }
 
 .myButton {
     border: none;
-    background-color: white;
-    border-radius: 25%;
+    margin-bottom: 5vh;
+    background-color: transparent;
+    // border-radius: 25%;
 }
+
+
 
