--- a/client/src/index.css
+++ b/client/src/index.css
@@ -40,3 +40,17 @@
     color: black;
     text-decoration: none;
 }
+
+
+.contain {
+    margin-top: 10vh;
+    height: 77vh;
+}
+
+.subButton {
+    margin-top: 15px !important;
+}
+
+.headerText:hover {
+    text-decoration: none;
+}
