--- a/client/src/scss/comment.module.scss
+++ b/client/src/scss/comment.module.scss
@@ -11,6 +11,7 @@
 
 .myButton {
     border: none;
+    outline:none;
     margin-bottom: 5vh;
     background-color: transparent;
     // border-radius: 25%;
