--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: center;
     width: 100%;
-    height: 100%;
+    height: 80vh;
     margin-bottom: 20px;
 }
 
