--- a/client/src/scss/footer.module.scss
+++ b/client/src/scss/footer.module.scss
@@ -1,6 +1,8 @@
 .footer_Container {
     background-color: #1C1D1E;
     display: flex;
+    position:static;
+    bottom: 0;
     justify-content: center;
     align-items: center;
     height: 110px;
