--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,13 +3,19 @@
     display: flex;
     justify-content: center;
     width: 100%;
-    height: 80vh;
+    height: 100%;
     margin-bottom: 20px;
+    min-height: 80vh;
+}
+
+.profile {
+    min-height: 80vh;
 }
 
 .inside-container {
     /* margin-top: 5vh; */
     display: flex;
+    height: 100%;
     justify-content: space-between;
     align-items: space-between;
     flex-wrap: wrap;
