--- a/client/src/scss/footer.module.scss
+++ b/client/src/scss/footer.module.scss
@@ -1,7 +1,7 @@
 .footer_Container {
     background-color: #1C1D1E;
     display: flex;
-    position: relative;
+    position: absolute;
     bottom: 0;
     justify-content: center;
     align-items: center;
