--- a/client/src/components/pages/Forms.css
+++ b/client/src/components/pages/Forms.css
@@ -10,7 +10,7 @@
 
 .background {
         background-image: url(https://images.unsplash.com/photo-1607026567935-9688a07f7821?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2916&q=80);
-        height: 80vh;
+        min-height: 85vh;
         display: flex;
         flex-direction: column;
         justify-content: center;
