--- a/client/src/scss/footer.module.scss
+++ b/client/src/scss/footer.module.scss
@@ -22,5 +22,7 @@
 
 .outsideContainer {
     width: 100%;
-    height: 100%;
+    // min-height: 25vh;
+    display: flex;
+    align-items: flex-end;
 }
