--- a/client/src/scss/footer.module.scss
+++ b/client/src/scss/footer.module.scss
@@ -1,7 +1,7 @@
 .footer_Container {
     background-color: #1C1D1E;
     display: flex;
-    position: absolute;
+    position: relative;
     bottom: 0;
     justify-content: center;
     align-items: center;
@@ -18,11 +18,4 @@
     display: flex;
     justify-content: center;
     width: 100px;
-}
-
-.outsideContainer {
-    width: 100%;
-    // min-height: 25vh;
-    display: flex;
-    align-items: flex-end;
 }
