--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,7 +4,7 @@
     justify-content: center;
     width: 100%;
     height: 100%;
-    /* margin-bottom: 20px; */
+    margin-bottom: 20px;
     min-height: 85vh;
 }
 
